{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 590,
  "lineage": "3cf2462c-2cb4-b0e6-8b88-e263cf85f9dd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "debian",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0ed2d2283aa1466df",
            "arn": "arn:aws:ec2:us-east-1:231093995570:instance/i-0c1499268c4ce2092",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0c1499268c4ce2092",
            "instance_id": "i-0c1499268c4ce2092",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "monitoring": false,
            "network_interface_id": "eni-00926c8aa46603dce",
            "private_dns": "ip-190-10-1-55.ec2.internal",
            "private_ip": "190.10.1.55",
            "public_dns": "ec2-18-210-28-215.compute-1.amazonaws.com",
            "public_ip": "18.210.28.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020218c483796e4a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0e7d8ef6a95f685",
            "tags": {
              "Name": "Debian 9 nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00069e45d55dae589",
              "sg-01471257f93e5268a",
              "sg-04bf832ee3768931d",
              "sg-056b440622a961312"
            ]
          },
          "depends_on": [
            "aws_instance.debian"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0ed2d2283aa1466df",
            "arn": "arn:aws:ec2:us-east-1:231093995570:instance/i-02fe2209ce46175c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-02fe2209ce46175c3",
            "instance_id": "i-02fe2209ce46175c3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "monitoring": false,
            "network_interface_id": "eni-00ba77624f85c0d1c",
            "private_dns": "ip-190-10-1-172.ec2.internal",
            "private_ip": "190.10.1.172",
            "public_dns": "ec2-34-236-190-8.compute-1.amazonaws.com",
            "public_ip": "34.236.190.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7d2f6769ebacb7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0e7d8ef6a95f685",
            "tags": {
              "Name": "Debian 9 nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00069e45d55dae589",
              "sg-01471257f93e5268a",
              "sg-04bf832ee3768931d",
              "sg-056b440622a961312"
            ]
          },
          "depends_on": [
            "aws_instance.debian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:231093995570:loadbalancer/Debian-elb",
            "availability_zones": [
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "Debian-elb-640241223.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Debian-elb",
            "idle_timeout": 60,
            "instances": [
              "i-02fe2209ce46175c3",
              "i-0c1499268c4ce2092"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Debian-elb",
            "security_groups": [
              "sg-0dcee5afba2bcb839"
            ],
            "source_security_group": "231093995570/terraform_example_elb",
            "source_security_group_id": "sg-0dcee5afba2bcb839",
            "subnets": [
              "subnet-0b0e7d8ef6a95f685"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.elb",
            "aws_subnet.subnet1",
            "data.aws_instance.debian",
            "data.aws_instances.Debians"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "debian",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed2d2283aa1466df",
            "arn": "arn:aws:ec2:us-east-1:231093995570:instance/i-0c1499268c4ce2092",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c1499268c4ce2092",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-00926c8aa46603dce",
            "private_dns": "ip-190-10-1-55.ec2.internal",
            "private_ip": "190.10.1.55",
            "public_dns": "ec2-18-210-28-215.compute-1.amazonaws.com",
            "public_ip": "18.210.28.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020218c483796e4a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0e7d8ef6a95f685",
            "tags": {
              "Name": "Debian 9 nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00069e45d55dae589",
              "sg-01471257f93e5268a",
              "sg-04bf832ee3768931d",
              "sg-056b440622a961312"
            ]
          },
          "depends_on": [
            "aws_security_group.all-outbound-traffic",
            "aws_security_group.http-group",
            "aws_security_group.https-group",
            "aws_security_group.ssh-group",
            "aws_subnet.subnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed2d2283aa1466df",
            "arn": "arn:aws:ec2:us-east-1:231093995570:instance/i-02fe2209ce46175c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02fe2209ce46175c3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-00ba77624f85c0d1c",
            "private_dns": "ip-190-10-1-172.ec2.internal",
            "private_ip": "190.10.1.172",
            "public_dns": "ec2-34-236-190-8.compute-1.amazonaws.com",
            "public_ip": "34.236.190.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7d2f6769ebacb7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0e7d8ef6a95f685",
            "tags": {
              "Name": "Debian 9 nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00069e45d55dae589",
              "sg-01471257f93e5268a",
              "sg-04bf832ee3768931d",
              "sg-056b440622a961312"
            ]
          },
          "depends_on": [
            "aws_security_group.all-outbound-traffic",
            "aws_security_group.http-group",
            "aws_security_group.https-group",
            "aws_security_group.ssh-group",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cb138df5e9323321",
            "owner_id": "231093995570",
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb138df5e9323321",
            "id": "r-rtb-0a5acfb51904e00241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5acfb51904e0024",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05360a93cef7f4366",
            "route_table_id": "rtb-0a5acfb51904e0024",
            "subnet_id": "subnet-0b0e7d8ef6a95f685"
          },
          "depends_on": [
            "aws_subnet.subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all-outbound-traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:security-group/sg-056b440622a961312",
            "description": "Allow traffic to leave the AWS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056b440622a961312",
            "ingress": [],
            "name": "all-outbound-traffic-group",
            "name_prefix": null,
            "owner_id": "231093995570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Outbound Traffic Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:security-group/sg-0dcee5afba2bcb839",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0dcee5afba2bcb839",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_example_elb",
            "name_prefix": null,
            "owner_id": "231093995570",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:security-group/sg-00069e45d55dae589",
            "description": "Allow traffic on port 80 (HTTP)",
            "egress": [],
            "id": "sg-00069e45d55dae589",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-access-group",
            "name_prefix": null,
            "owner_id": "231093995570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP Inbound Traffic Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:security-group/sg-01471257f93e5268a",
            "description": "Allow traffic on port 443 (HTTPS)",
            "egress": [],
            "id": "sg-01471257f93e5268a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https-access-group",
            "name_prefix": null,
            "owner_id": "231093995570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTPS Inbound Traffic Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:security-group/sg-04bf832ee3768931d",
            "description": "Allow traffic to port 22 (SSH)",
            "egress": [],
            "id": "sg-04bf832ee3768931d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-access-group",
            "name_prefix": null,
            "owner_id": "231093995570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Access Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:subnet/subnet-0b0e7d8ef6a95f685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "190.10.1.0/24",
            "id": "subnet-0b0e7d8ef6a95f685",
            "map_public_ip_on_launch": true,
            "owner_id": "231093995570",
            "vpc_id": "vpc-0a7000e1e63f003d6"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231093995570:vpc/vpc-0a7000e1e63f003d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.10.0.0/16",
            "default_network_acl_id": "acl-0c940a94518be8b3c",
            "default_route_table_id": "rtb-0a5acfb51904e0024",
            "default_security_group_id": "sg-0624bf8d9a7d3d446",
            "dhcp_options_id": "dopt-e743519c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a7000e1e63f003d6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a5acfb51904e0024",
            "owner_id": "231093995570",
            "tags": {
              "Name": "VPC_Default_Terraform"
            }
          }
        }
      ]
    }
  ]
}